--- a/package.json
+++ b/package.json
@@ -17,9 +17,18 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "@graphql-tools/merge": "^9.0.3",
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "graphql": "^16.8.1"
+    "express-session": "^1.18.0",
+    "graphql": "^16.8.1",
+    "graphql-passport": "^0.6.8",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
